[package]
name = "boiler_plate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "migrations"]

[dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "./migrations" }
dotenv = "0.15.0"
tokio = { version = "1.34.0", features = ["full"] }
